engine/tests/detection_corpus/bad/secret_assign_db_password.php
<?php
$db_password = "pr0d-mysql-2024!";
